<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="maxTemp">max</string>
    <string name="minTemp">min</string>
    <string name="changeLoc">Change Location</string>
    <string name="changeTemp">Change Temperature Unit</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="weather">Weather</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="refresh">Refresh Data</string>
    <string name="thinFontFamily">sans-serif-light</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
