<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/temperature_unit_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Switch
            android:id="@+id/celsiusSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:padding="10dp"
            android:switchPadding="10dp"
            android:text="@string/celsius"
            android:textSize="20dp"
            tools:checked="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Switch
            android:id="@+id/fahrenheitSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:padding="10dp"
            android:text="@string/fahrenheit"
            android:textSize="20dp"
            tools:checked="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Switch
            android:id="@+id/kelvinSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:padding="10dp"
            android:text="@string/kelvin"
            android:textSize="20dp"
            tools:checked="false" />

    </LinearLayout>




</LinearLayout>