<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/foreground"
    android:gravity="center"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:weightSum="3"
    android:clickable="true"
    android:onClick="editActions">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/rowFragmentDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@string/thinFontFamily"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="20dp"
            tools:text="@string/date" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:id="@+id/rowFragmentImage"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:cropToPadding="false"
            android:textSize="20dp"
            android:visibility="visible"

            app:srcCompat="@mipmap/w01d" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/rowFragmentTempMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/thinFontFamily"
            android:text="@string/maxTemp"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>